--- a/chaipen/Info.plist
+++ b/chaipen/Info.plist
@@ -45,6 +45,8 @@
 		<string>KrungthaiFast-UltraLight.ttf</string>
 		<string>KrungthaiFast-UltraLightItalic.ttf</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
